VerifyAccessToken functionality added
