# apps/backend/src/swagger.json
@@ -57,7 +57,7 @@
     },
     "responses": {
       "BAD_REQUEST": {
-        "description": "Bad Request",
+        "description": "Bad Request - Invalid request payload",
         "content": {
           "application/json": {
             "schema": {
@@ -129,7 +129,7 @@
         }
       },
       "UNAUTHORIZED": {
-        "description": "UNAUTHORIZED",
+        "description": "Unauthorized - User is not logged in",
         "content": {
           "application/json": {
             "schema": {
@@ -177,7 +177,7 @@
         }
       },
       "BAD_USER_INPUT": {
-        "description": "BAD USER INPUT",
+        "description": "Unprocessable Entity - Request cannot be processed due to semantic errors",
         "content": {
           "application/json": {
             "schema": {
@@ -201,7 +201,7 @@
         }
       },
       "INTERNAL_SERVER_ERROR": {
-        "description": "INTERNAL SERVER ERROR",
+        "description": "Internal Server Error",
         "content": {
           "application/json": {
             "schema": {
@@ -424,6 +424,26 @@
                 }
               }
             }
+          },
+          "401": {
+            "$ref": "#/components/responses/UNAUTHORIZED"
+          },
+          "500": {
+            "$ref": "#/components/responses/INTERNAL_SERVER_ERROR"
+          }
+        }
+      }
+    },
+    "/api/v1/auth/logout": {
+      "post": {
+        "summary": "Logout the user",
+        "description": "This endpoint is used to log out a user and invalidate their session. After successful logout, the user will no longer have access to protected resources.",
+        "tags": ["Auth"],
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "204": {
+            "description": "Successfully logout.",
+            "content": {}
           },
           "401": {
             "$ref": "#/components/responses/UNAUTHORIZED"
